--- a/minimal_theme/css/style.default.css
+++ b/minimal_theme/css/style.default.css
@@ -176,13 +176,10 @@ button i.fa {
 .box {
   background: #fff;
   margin: 0 0 30px;
-  border: solid 1px #ccc;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   padding: 20px;
-  border-left: none;
-  border-right: none;
 }
 .box .box-header {
   background: #f7f7f7;
@@ -369,7 +366,6 @@ button i.fa {
   text-transform: uppercase;
   font-size: 50px;
   color: #fff;
-  margin-bottom: 40px;
 }
 @media (max-width: 991px) {
   #intro .item h1 {
@@ -399,10 +395,16 @@ button i.fa {
     font-size: 14px;
   }
 }
+@media (min-width: 768px) {
+  .carousel-caption {
+  	left: 10% !important;
+  	right: 10% !important;
+}
 @media (max-width: 991px) {
   #intro .item .carousel-caption {
     left: 10%;
     right: 10%;
+    top: 40%;
   }
 }
 #intro .container,
@@ -1549,8 +1551,13 @@ hr {
 }
 .btn-primary {
   color: #b56868;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
   border-color: #b56868;
+}
+.btn-white {
+  color: #FFFFFF;
+  background-color: transparent !important;
+  border-color: #FFFFFF;
 }
 .btn-primary:hover,
 .btn-primary:focus,
