--- a/app/views/browsing.html
+++ b/app/views/browsing.html
@@ -3,26 +3,26 @@
     <div id="content">
         <div class="container">
 
-            <!--<div class="col-md-12">
-                <ul class="breadcrumb">
+            <div class="col-md-12">
+               <!--  <ul class="breadcrumb">
 
                     <li><a href="#">Home</a>
                     </li>
                     <li>Ladies</li>
-                </ul>
+                </ul> -->
                 <div class="row">
                     <div class="box text-center">
                         <div class="row">
                             <div class="col-sm-10 col-sm-offset-1">
-                                <h1>Ladies</h1>
-                                <p class="text-muted">In our Ladies department we offer wide selection of the best products we have found and carefully selected worldwide. Pellentesque habitant morbi tristique senectus et netuss.</p>
+                                <h1>Meet Our Stylists</h1>
+                                <p class="text-muted"></p>
                             </div>
                         </div>
                     </div>
 
                 </div>
 
-            </div>-->
+            </div>
 
             <div class="box info-bar full-width no-border">
                 <div class="row">
@@ -44,8 +44,8 @@
                                     <div class="products-sort-by">
                                         <strong>Sort by</strong>
                                         <select name="sort-by" class="form-control" ng-model="browsingCtrl.sortBy">
-                                            <option>Price</option>
-                                            <option>Rating</option>
+                                            <option value="" selected disabled>Sort by</option>
+                                            <option value="{{option}}" ng-repeat="option in browsingCtrl.sortings">{{option}}</option>
                                         </select>
                                     </div>
                                 </div>
@@ -57,10 +57,10 @@
 
             <div class="row products">
 
-                <div class="col-md-3 col-sm-4" ng-repeat="stylist in browsingCtrl.stylists | filter: browsingCtrl.filters">
+                <div class="col-md-4 col-sm-4" ng-repeat="stylist in browsingCtrl.stylists | filter: browsingCtrl.filters | orderBy: browsingCtrl.sortBy">
                     <div class="product">
                         <div class="image">
-                            <a href="/stylist">
+                            <a href="/#/stylist" class="work-img">
                                 <img ng-src="{{stylist.img}}" alt="" class="img-responsive image1">
                             </a>
                             <div class="quick-view-button">
@@ -68,10 +68,16 @@
                             </div>
                         </div>
                         <!-- /.image -->
+                        <div class="profile-pic">
+                            <img ng-src="{{stylist.icon}}" alt="" class="img-responsive image1 img-circle">
+                        </div>
+
                         <div class="text">
                             <h3><a href="">{{stylist.name}}</a></h3>
-                            <p class="price">{{stylist.tier}}</p>
+                            <rating ng-model="stylist.rating" max="5" readonly="true" on-hover="hoveringOver(value)" on-leave="overStar = null" titles="['one','two','three']" ></rating>
+                            <!-- <p class="price">{{stylist.tier}}</p>
                             <p class="price">{{stylist.event}}</p>
+                            <p class="price">{{stylist.rating}}</p> -->
                         </div>
                         <!-- /.text -->
                     </div>
