--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,24 @@
 .filter-by{
 	margin-left: 10px;
 }
+
+#content .product{
+	position: relative;
+}
+
+
+#content .product .profile-pic {
+  position: absolute;
+  top: 50%;
+  left: 25%;
+  bottom: 25%;
+  right: 25%;
+}
+
+#content .product .profile-pic img{
+	border:3px solid #fff;
+}
+
+#content .product .text {
+  margin-top: 60px;
+}
