add stylist.html to app folder

--- a/app/views/stylist.html
+++ b/app/views/stylist.html
@@ -1,3 +1,285 @@
-<div>
-    stylist
-</div>
+
+            <div id="intro" style="width: 1390px; height: 592px;">
+                    <div class="item" style="width: 1390px; height: 592px;">
+                        <div class="container">
+                            <div class="row">
+                                <div class="carousel-caption">
+                                    <h1>MEET SOFIA</h1>
+                                    <h3>#modern #day-to-night #office-chic</h3>
+                                    <p><a class="btn btn-lg btn-white" href="#content" role="button">BOOK NOW</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <center>
+                    <div class="col-sm-12">
+
+                        <div class="box text-center">
+                            <h3 class="text-uppercase">About Sofia</h3>
+                            <p>Sofia blablablablablablablablabla</p>
+                        </div>
+                    </div>
+                </center>
+                </div>
+            <div class="col-sm-12">
+
+                    <div class="box text-center">
+                        <h3 class="text-uppercase">Featured Looks</h3>
+
+                        <h4 class="text-muted">Browse some of Sofia's most beloved transformations</h4>
+                           <p><a class="btn btn-lg " href="#content" role="button">BOOK NOW</a>
+                    </div>
+
+                    <div class="row products">
+
+                        <div class="col-md-3 col-sm-4">
+                            <div class="product">
+                                <div class="image" style="height: 255px;">
+                                    <a href="detail.html">
+                                        <img src="img/product1.jpg" alt="" class="img-responsive image1">
+                                    </a>
+                                </div>
+                                <!-- /.image -->
+                            
+                                <!-- /.text -->
+                            </div>
+                            <!-- /.product -->
+                        </div>
+
+                        <div class="col-md-3 col-sm-4">
+                            <div class="product">
+                                <div class="image" style="height: 255px;">
+                                    <a href="detail.html">
+                                        <img src="img/product2.jpg" alt="" class="img-responsive image1">
+                                    </a>
+                                </div>
+                                <!-- /.image -->
+                               
+                                <!-- /.text -->
+                                <!-- /.ribbon -->
+
+                                <!-- /.ribbon -->
+                            </div>
+                            <!-- /.product -->
+                        </div>
+
+                        <div class="col-md-3 col-sm-4">
+                            <div class="product">
+                                <div class="image" style="height: 255px;">
+                                    <a href="detail.html">
+                                        <img src="img/product3.jpg" alt="" class="img-responsive image1">
+                                    </a>
+                                </div>
+                        
+                                <!-- /.text -->
+                            </div>
+                            <!-- /.product -->
+                        </div>
+
+                        <div class="col-md-3 col-sm-4">
+                            <div class="product">
+                                <div class="image" style="height: 255px;">
+                                    <a href="detail.html">
+                                        <img src="img/product4.jpg" alt="" class="img-responsive image1">
+                                    </a>
+                                </div>
+                                <!-- /.image -->
+                               
+                                <!-- /.text -->
+                            </div>
+                            <!-- /.product -->
+                        </div>
+
+                        <div class="modal fade" id="product-quick-view-modal" tabindex="-1" role="dialog" aria-hidden="false">
+                            <div class="modal-dialog modal-lg">
+                                <div class="modal-content">
+                                    <div class="modal-body">
+
+                                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+
+                                        <div class="row quick-view product-main">
+                                            <div class="col-sm-6">
+                                                <div class="quick-view-main-image">
+                                                    <img src="img/detailbig1.jpg" alt="" class="img-responsive">
+                                                </div>
+
+                                                <div class="ribbon ribbon-quick-view sale">
+                                                    <div class="theribbon">FEATURED</div>
+                                                    <div class="ribbon-background"></div>
+                                                </div>
+                                                <!-- /.ribbon -->
+
+                                                <!-- /.ribbon -->
+
+                                                <div class="row thumbs">
+                                                    <div class="col-xs-4">
+                                                        <a href="img/detailbig1.jpg" class="thumb active">
+                                                            <img src="img/detailsquare.jpg" alt="" class="img-responsive">
+                                                        </a>
+                                                    </div>
+                                                    <div class="col-xs-4">
+                                                        <a href="img/detailbig2.jpg" class="thumb">
+                                                            <img src="img/detailsquare2.jpg" alt="" class="img-responsive">
+                                                        </a>
+                                                    </div>
+                                                    <div class="col-xs-4">
+                                                        <a href="img/detailbig3.jpg" class="thumb">
+                                                            <img src="img/detailsquare3.jpg" alt="" class="img-responsive">
+                                                        </a>
+                                                    </div>
+                                                </div>
+
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--/.modal-dialog-->
+                        </div>
+                        <!-- /.modal -->
+
+                    </div>
+                    <!-- /.products -->
+
+                </div>           
+
+                        <div class="modal fade" id="product-quick-view-modal" tabindex="-1" role="dialog" aria-hidden="false">
+                            <div class="modal-dialog modal-lg">
+                                <div class="modal-content">
+                                    <div class="modal-body">
+
+                                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+
+                                        <div class="row quick-view product-main">
+                                            <div class="col-sm-6">
+                                                <div class="quick-view-main-image">
+                                                    <img src="img/detailbig1.jpg" alt="" class="img-responsive">
+                                                </div>
+
+                                                <div class="ribbon ribbon-quick-view sale">
+                                                    <div class="theribbon">FEATURED</div>
+                                                    <div class="ribbon-background"></div>
+                                                </div>
+                                                <!-- /.ribbon -->
+
+                                                <!-- /.ribbon -->
+
+                                                <div class="row thumbs">
+                                                    <div class="col-xs-4">
+                                                        <a href="img/detailbig1.jpg" class="thumb active">
+                                                            <img src="img/detailsquare.jpg" alt="" class="img-responsive">
+                                                        </a>
+                                                    </div>
+                                                    <div class="col-xs-4">
+                                                        <a href="img/detailbig2.jpg" class="thumb">
+                                                            <img src="img/detailsquare2.jpg" alt="" class="img-responsive">
+                                                        </a>
+                                                    </div>
+                                                    <div class="col-xs-4">
+                                                        <a href="img/detailbig3.jpg" class="thumb">
+                                                            <img src="img/detailsquare3.jpg" alt="" class="img-responsive">
+                                                        </a>
+                                                    </div>
+                                                </div>
+
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--/.modal-dialog-->
+                        </div>
+                        <!-- /.modal -->
+
+                    </div>
+
+                     
+            <div id="comments">
+                
+                    <div class="row comment">
+                        <center>
+                        <h2>2 reviews</h2>
+                        </center>
+                        <div class="col-md-8">
+                            <div class="col-sm-3 col-md-2 text-center-xs">
+                                <p>
+                                    <img src="img/blog-avatar2.jpg" class="img-responsive img-circle" alt="">
+                                </p>
+                            </div>
+                            <div class="col-md-10">
+                                <h5>Julie Alma <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></h5>
+                                <p class="posted"><i class="fa fa-clock-o"></i> September 23, 2015 at 11:07 am</p>
+                                <p>Hiring a stylist was the best decision I ever made. I don't agonize over what to wear anymore because I know she's got my back and will make me look my best!</p>
+                            </div>
+                        </div>
+                    </div>        <!-- /#content -->
+       
+                     <div class="row comment">
+                        <div class="col-md-8">
+                            <div class="col-sm-3 col-md-2 text-center-xs">
+                                <p>
+                                    <img src="img/blog-avatar.jpg" class="img-responsive img-circle" alt="">
+                                </p>
+                            </div>
+                            <div class="col-md-10">
+                                <h5>Julie Alma <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></h5>
+                                <p class="posted"><i class="fa fa-clock-o"></i> July 7, 2015 at 4:21 am</p>
+                                <p>Clueless no more! I've gotten so many compliments since working with my stylist, I only wish I had found her sooner!</p>
+                            </div>
+                        </div>
+                    </div> 
+                    </div>
+      <div class="box text-center">
+        <h3 class="text-uppercase">#SofiasStylebar</h3>
+
+            <h4 class="text-muted">Tag #SofiaStylebar in your photos to be featured on Sofia's page.</h4>
+        </div>
+
+    <div id="slider" class="owl-carousel owl-theme" style="padding-bottom: 5%">
+
+        <div class="item">
+            <a href="#">
+                <img src="img/slide1.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+
+        <div class="item">
+            <a href="#">
+                <img src="img/slide2.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+
+        <div class="item">
+            <a href="#">
+                <img src="img/slide3.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+
+        <div class="item">
+            <a href="#">
+                <img src="img/slide4.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+
+        <div class="item">
+            <a href="#">
+                <img src="img/slide5.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+
+        <div class="item">
+            <a href="#">
+                <img src="img/slide6.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+
+
+    </div>    
+    <center>   
+     <p><a class="btn btn-lg " href="#content" role="button">BOOK NOW</a>     
+    </center>   
