--- a/app/views/home.html
+++ b/app/views/home.html
@@ -398,7 +398,7 @@ _________________________________________________________ -->
             <h4 class="text-muted">Tag #Stylebar in your photos to be featured on our website.</h4>
         </div>
 
-    <div id="slider" class="owl-carousel owl-theme" style="padding-bottom: 5%">
+    <wrap-owlcarousel id="slider" class="owl-carousel owl-theme" style="padding-bottom: 5%" data-options="{autoPlay: 2000, stopOnHover: true, slideSpeed : 300, paginationSpeed : 400}">
 
         <div class="item">
             <a href="#">
@@ -437,7 +437,7 @@ _________________________________________________________ -->
         </div>
 
 
-    </div>
+    </wrap-owlcarousel>
 
     </div>
     <!-- /#all -->
