--- a/app/views/main.html
+++ b/app/views/main.html
@@ -4,7 +4,7 @@ _________________________________________________________ -->
     <div class="container">
         <div class="navbar-header">
 
-            <a class="navbar-brand home" href="index.html">
+            <a class="navbar-brand home" ui-sref=".home">
                 <img src="img/logo.png" alt="Minimal logo" class="hidden-xs hidden-sm">
                 <img src="img/logo-small.png" alt="Minimal logo" class="visible-xs visible-sm"><span class="sr-only">Stylebar - go to homepage</span>
             </a>
@@ -13,7 +13,7 @@ _________________________________________________________ -->
                     <span class="sr-only">Toggle navigation</span>
                     <i class="fa fa-align-justify"></i>
                 </button>
-                <a class="btn btn-primary navbar-toggle" href="basket.html">
+                <a class="btn btn-primary navbar-toggle" href>
                     <i class="fa fa-shopping-cart"></i>  <span class="hidden-xs">Sign up</span>
                 </a>
                 <button type="button" class="navbar-toggle btn-default" data-toggle="collapse" data-target="#search">
@@ -33,16 +33,16 @@ _________________________________________________________ -->
             <ul class="nav navbar-nav navbar-left">
 
                 <li class="dropdown yamm-fw">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">How it Works</a>
+                    <a ui-sref=".home" class="dropdown-toggle" data-toggle="dropdown">How it Works</a>
                 </li>
                 <li class="dropdown yamm-fw">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Style Me</a>
+                    <a ui-sref=".browsing" class="dropdown-toggle" data-toggle="dropdown">Style Me</a>
                 </li>
                 <li class="dropdown yamm-fw">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Our Stylists</a>
+                    <a ui-sref=".browsing" class="dropdown-toggle" data-toggle="dropdown">Our Stylists</a>
                 </li>
                 <li class="dropdown yamm-fw">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Stylefile</a>
+                    <a ui-sref=".home" class="dropdown-toggle" data-toggle="dropdown">Stylefile</a>
                 </li>
             </ul>
 
@@ -103,13 +103,13 @@ _________________________________________________________ -->
                     <h4>Pages</h4>
 
                     <ul>
-                        <li><a href="text.html">How it Works</a>
+                        <li><a href="/#">How it Works</a>
                         </li>
-                        <li><a href="text-left.html">Style Me</a>
+                        <li><a href="/#/browsing">Style Me</a>
                         </li>
-                        <li><a href="faq.html">Our Stylists</a>
+                        <li><a href="/#">Our Stylists</a>
                         </li>
-                        <li><a href="contact.html">Stylefile</a>
+                        <li><a href="/#">Stylefile</a>
                         </li>
                     </ul>
 
@@ -125,11 +125,11 @@ _________________________________________________________ -->
                     <ul>
                         <li><a href="text.html">Login</a>
                         </li>
-                        <li><a href="text-left.html">Style Me</a>
+                        <li><a href="/#/browsing">Style Me</a>
                         </li>
-                        <li><a href="faq.html">Register</a>
+                        <li><a href="/#">Register</a>
                         </li>
-                        <li><a href="contact.html">FAQ</a>
+                        <li><a href="/#">FAQ</a>
                         </li>
                     </ul>
 
